# coffee-shop-simulator

./: .gitignore  CMakeLists.txt  INSTRUCTIONS.md  LICENSE  README.md  main.cpp  run.cmd  run.sh
.github/workflows/: cmake-multi-platform.yml
include/: Coffee.h  CoffeeOrder.h  CoffeeShop.h  LargeCoffee.h  MediumCoffee.h  SmallCoffee.h
src/: Coffee.cpp  CoffeeOrder.cpp  CoffeeShop.cpp  LargeCoffee.cpp  MediumCoffee.cpp  SmallCoffee.cpp
test/: CMakeLists.txt  test-coffee-order.cpp  test-coffee.cpp
